Added game requesting

--- a/Pipfile
+++ b/Pipfile
@@ -5,9 +5,11 @@ name = "pypi"
 
 [packages]
 sqlalchemy = "*"
+aiohttp = "*"
+pylint = "*"
 
 [dev-packages]
 rope = "*"
 
 [requires]
-python_version = "3.7"
+python_version = "3.6"
